# RDTextract

./: .gitignore  LICENSE  README.md  pyproject.toml
RDTextract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmark/: README.md  debug_double_bullet.py  debug_empty_trace.py  debug_orphan_empty.py  debug_remaining.py  fetch.py  run.py  tranco_top_fr.txt
rdtextract/: __init__.py  cleaner.py  converter.py
tests/: test_basic.py
